# props/apiResponses.ts
@@ -1,0 +1,15 @@
+
+export type ErrorResponse = {
+    name: string;
+    message: string;
+    status?: number;
+}
+
+export type ReceiptResponse = {
+    id: number;
+    title: string;
+    note: string | null;
+    endOfWarranty: null | Date;
+    createdAt: Date;
+    photo: any[];
+}
